--- a/public/css/style.css
+++ b/public/css/style.css
@@ -837,6 +837,31 @@ input[type="range"]{-webkit-appearance:none;width:100%;height:7px;background:var
 /*! CSS Used from: Embedded */
 .row_dis .col{padding:10px 13px;margin:0;border-radius:91px;}
 
+
+/*! CSS Used from: https://highnessinv.com/css/hover/hover.css */
+.hvr-grow{display:inline-block;vertical-align:middle;-webkit-transform:perspective(1px) translateZ(0);transform:perspective(1px) translateZ(0);box-shadow:0 0 1px rgba(0, 0, 0, 0);-webkit-transition-duration:0.3s;transition-duration:0.3s;-webkit-transition-property:transform;transition-property:transform;}
+.hvr-grow:hover,.hvr-grow:focus,.hvr-grow:active{-webkit-transform:scale(1.1);transform:scale(1.1);}
+
+/*! CSS Used from: https://highnessinv.com/css/style.css */
+ul{list-style:none;}
+a{text-decoration:none;}
+*{font-family:"Cairo", sans-serif;}
+footer{color:#888;}
+.href-link-footer a{color:#888;}
+.img06{float:right;}
+.img06 img{max-height:62px;}
+.bg-footer1{background-color:#333;}
+.links-footer strong{color:#dfdfdf;}
+.links-footer ul{list-style:none;margin:0;}
+.links-footer ul a{text-decoration:none;color:#ddd;font-weight:300;}
+.links-footer ul a:hover{color:#e9e9e9;}
+.titlemax{color:#bbb;font-size:0.8rem;}
+.desk-footer p{margin:0;}
+@media (max-width: 767.98px){
+.social-icons{display:table;margin:auto;}
+.img06{margin:0px 6px;}
+}
+
 :root{
   --color-green:#f9b707;
   --color2:#f9b707;
