--- a/public/css/style.css
+++ b/public/css/style.css
@@ -862,7 +862,9 @@ footer{color:#888;}
 .img06{margin:0px 6px;}
 }
 
-
+footer p{
+  color: #a7a7a7;
+}
 :root{
   --color-green:#f9b707;
   --color2:#f9b707;
